# abstract-data-pipeline

./: .gitignore  README.md  bootstrap_adp.sh  create.sh  pyproject.toml  requirements.txt  runner-logging.patch  runner_needs.patch
adp/: cli.py
adp/core/: base.py  cli.py  registry.py  runner.py  sinks.py  state.py  utils.py
pipelines/: alerts_flat.yaml  debug_states.yaml  echo_test.yaml  gauges.yaml  ice_clean.yaml  ice_test.yaml  ice_zip.yaml  weather_alerts.yaml  weather_alerts_point.yaml  weather_alerts_wv.yaml
plugins/adp_plugins_disaster/: pyproject.toml  setup.cfg
plugins/adp_plugins_disaster/adp_plugins/disaster/: weather_gov.py
plugins/adp_plugins_dropship/adp_plugins/: sources.py  transforms.py
plugins/adp_plugins_ice/: .pyproject.toml.swp  pyproject.toml  requirements.txt  setup.cfg
plugins/adp_plugins_ice/adp_plugins/ice/: ice_data.py  ice_excel.py
plugins/adp_plugins_midi/: midi_fetcher.py  midi_manifest.jsonl  midi_to_audio.py  push_soundfonts_to_hf.py  soundfont_fetcher.py  soundfont_pipeline.py
plugins/adp_plugins_midi/specs/: 222_rock-halftime_140_fill_4-4_FluidR3 GM2-2_waveform.yaml  5_rock_60_beat_6-8_FluidR3 GM2-2_pitch.yaml  5_rock_60_beat_6-8_FluidR3 GM2-2_waveform.yaml  60_funk_112_fill_4-4_FluidR3 GM2-2_pitch.yaml  74_punk_144_fill_4-4_Sonatina_Symphonic_Orchestra_beats.yaml  74_punk_144_fill_4-4_Sonatina_Symphonic_Orchestra_pitch.yaml  74_punk_144_fill_4-4_Sonatina_Symphonic_Orchestra_spectrogram.yaml  74_punk_144_fill_4-4_Sonatina_Symphonic_Orchestra_waveform.yaml  MIDI-Unprocessed_12_R3_2011_MID--AUDIO_R3-D4_07_Track07_wav_FluidR3 GM2-2_spectrogram.yaml  MIDI-Unprocessed_12_R3_2011_MID--AUDIO_R3-D4_07_Track07_wav_FluidR3 GM2-2_tempo.yaml  MIDI-Unprocessed_12_R3_2011_MID--AUDIO_R3-D4_07_Track07_wav_FluidR3 GM2-2_waveform.yaml  MIDI-Unprocessed_20_R1_2011_MID--AUDIO_R1-D8_03_Track03_wav_MuseScore_General_spectrogram.yaml  MIDI-Unprocessed_20_R1_2011_MID--AUDIO_R1-D8_03_Track03_wav_Sonatina_Symphonic_Orchestra_beats.yaml  MIDI-Unprocessed_20_R1_2011_MID--AUDIO_R1-D8_03_Track03_wav_Sonatina_Symphonic_Orchestra_energy.yaml  MIDI-Unprocessed_20_R1_2011_MID--AUDIO_R1-D8_03_Track03_wav_Sonatina_Symphonic_Orchestra_tempo.yaml  MIDI-Unprocessed_21_R1_2011_MID--AUDIO_R1-D8_09_Track09_wav_FluidR3 GM2-2_beats.yaml  MIDI-Unprocessed_21_R1_2011_MID--AUDIO_R1-D8_09_Track09_wav_FluidR3 GM2-2_energy.yaml  MIDI-Unprocessed_21_R1_2011_MID--AUDIO_R1-D8_09_Track09_wav_FluidR3 GM2-2_spectrogram.yaml  MIDI-Unprocessed_21_R1_2011_MID--AUDIO_R1-D8_09_Track09_wav_FluidR3 GM2-2_waveform.yaml  MIDI-Unprocessed_R2_D2-19-21-22_mid--AUDIO-from_mp3_22_R2_2015_wav--1_MuseScore_General_tempo.yaml
plugins/adp_viz_videos/adp_viz_videos/: download_by_state.py  generate_specs.py  transform_data.py  viz2video.py
plugins/adp_viz_videos/specs/: county_employment_barrace_1080x1920.yaml  county_unemp_map_1080x1080.yaml  county_unemp_map_1080x1920.yaml  international_gdp_pc_line_1080x1920.yaml  state_gdp_barrace_1080x1080.yaml  state_gdp_line_1080x1080.yaml  state_gdp_line_1080x1920.yaml  us_gdp_line_1080x1920.yaml
plugins/audiobooks/cloudrun/: Dockerfile  cloudrun_jobs.yaml  job_tts.py  main.py  requirements.txt
plugins/audiobooks/source/: batch_download.py  gutenberg_sqlite.py  query_books.py  query_example.py  source_gutenberg_rdf.py
plugins/audiobooks/transform/: clean_text.py  tts_kokoro.py
plugins/civil_narratives/caselaw/: embed_opinions.py  extract_holdings.py  rank_cases.py
plugins/civil_narratives/embeddings/: mpnet.py  qdrant_index.py
plugins/civil_narratives/pipelines/: build_event_index.py  find_similar_cases.py  narrative_to_structured.py  structured_to_parquet.py
plugins/civil_narratives/source/: cleaners.py  intake_email.py  intake_social.py  intake_text.py
plugins/civil_narratives/sync/: flatten_for_parquet.py  sync_parquet.py  sync_postgres.py  sync_vector_index.py
plugins/civil_narratives/tests/: test_case_retrieval.py  test_element_support.py  test_extract_events.py  test_issue_classification.py
plugins/civil_narratives/transform/: classify_issues.py  extract_events.py  fill_elements.py  pipeline.py  role_resolution.py
plugins/dropship/: sinks.py
plugins/dropship/clients/: cj,py  cj.py
plugins/dropship/source/: cj_catalog.py  cj_client.py  cj_retro_catalog.py  cj_taxonomy_checkpoint.json  grab_cj_taxonomy.py  grab_keywords.py  retro_catalog_pipeline.py
plugins/ice/ice/: transforms.py
plugins/meals_morgantown/: meals_pipeline.py
plugins/midi/: __init__.py  generate_audio_specs.py  generate_manifest.py  manifest.json  move.sh
plugins/midi/orchestrate/: hf_build_waveform_specs.py  midi_to_video.py
plugins/midi/processing_sketch/: sketch.pde
plugins/midi/sink/: hf_midi_enrich_and_push.py  merge_video.py  midi_video.pde  push_audio_specs.py  push_to_hf.py  render_pipeline.py  run_waveform_to_sound_videos.py  sink_audio.py  sketch.properties  time  upload_waveform_specs.py
plugins/midi/source/: __init__.py  audio_dataset.py  hf_dataset_pull.py  hf_waveform_specs_source.py  json  midi_fetcher.py  muse_score_sf3_downloader.py
plugins/midi/specs/: 104_funk-rock_92_fill_4-4_audio_beats.yaml  104_funk-rock_92_fill_4-4_audio_energy.yaml  104_funk-rock_92_fill_4-4_audio_pitch_curve.yaml  104_funk-rock_92_fill_4-4_audio_spectrogram.yaml  104_funk-rock_92_fill_4-4_audio_tempo.yaml  104_funk-rock_92_fill_4-4_audio_waveform.yaml  104_hiphop_70_fill_4-4_audio_beats.yaml  104_hiphop_70_fill_4-4_audio_energy.yaml  104_hiphop_70_fill_4-4_audio_pitch_curve.yaml  104_hiphop_70_fill_4-4_audio_spectrogram.yaml  104_hiphop_70_fill_4-4_audio_tempo.yaml  104_hiphop_70_fill_4-4_audio_waveform.yaml  109_rock_95_beat_4-4_audio_beats.yaml  109_rock_95_beat_4-4_audio_energy.yaml  109_rock_95_beat_4-4_audio_pitch_curve.yaml  109_rock_95_beat_4-4_audio_spectrogram.yaml  109_rock_95_beat_4-4_audio_tempo.yaml  109_rock_95_beat_4-4_audio_waveform.yaml  (+249 more)
plugins/utils/: path_resolver.py
plugins/viz_videos/: batch_viz_render.py  viz2video.py
tests/: debug_headers.yaml  test_midi_source_audio.py  test_needs.py  test_needs.yaml
(+783 files in other folders)
