[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adp-plugins-disaster"
version = "0.0.1"
description = "Example ADP plugin: weather.gov alerts"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.entry-points."adp.plugins"]
weather_gov = "adp_plugins.disaster.weather_gov:WeatherGovAlertsSource"
alerts_to_flat = "adp_plugins.disaster.weather_gov:AlertsToFlatRecords"
geojson_alerts_sink = "adp_plugins.disaster.weather_gov:GeoJsonAlertsSink"
