[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstract-data-pipeline"
version = "0.1.0"
description = "Abstract Data Pipeline core + plugins"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pandas",
    "geopandas",
    "pyyaml",
    "huggingface-hub",
]

[tool.setuptools]
packages = ["adp", "adp_plugins_disaster", "adp_plugins_ice"]

[tool.setuptools.package-dir]
# Map logical package names to actual directories
adp = "adp"
adp_plugins_disaster = "plugins/adp_plugins_disaster"
adp_plugins_ice = "plugins/adp_plugins_ice"

[project.entry-points."adp.plugins"]
# disaster plugin
weather_gov = "adp_plugins_disaster.weather_gov:WeatherGovAlertsSource"
alerts_to_flat = "adp_plugins_disaster.weather_gov:AlertsToFlatRecords"
geojson_alerts_sink = "adp_plugins_disaster.weather_gov:GeoJsonAlertsSink"

# ice plugin
ice_excel = "adp_plugins_ice.ice_excel:LocalExcelFiles"
detect_headers = "adp_plugins_ice.ice_excel:DetectHeaderAndRead"
csv_sink = "adp_plugins_ice.ice_excel:CsvSink"
