[build-system]

requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adp-plugins-disaster"
version = "0.1.0"
description = "ADP plug-ins for disaster data sources (weather.gov alerts, etc.)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",            # weather.gov API
]

[project.entry-points."adp.plugins"]
weather_gov           = "adp_plugins.disaster.weather_gov:WeatherGovAlertsSource"
alerts_to_flat        = "adp_plugins.disaster.weather_gov:AlertsToFlatRecords"
geojson_alerts_sink   = "adp_plugins.disaster.weather_gov:GeoJsonAlertsSink"

[tool.setuptools]
packages = { find = { where = ["."] } }   # include adp_plugins.disaster.*
include-package-data = false

