# plugins/adp_plugins_ice/pyproject.toml
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adp-plugins-ice"
version = "0.1.0"
description = "ADP plug-ins for ICE detention & enforcement datasets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
geo = ["geopandas"]
ml  = ["scikit-learn", "xgboost"]

[project.entry-points."adp.plugins"]
ice.download_zip           = "adp_plugins.ice.ice:DownloadIceZip"
ice.local_files            = "adp_plugins.ice.ice:LocalExcelFiles"
ice.detect_headers         = "adp_plugins.ice.ice:DetectHeaderAndRead"
ice.csv_sink               = "adp_plugins.ice.ice:CsvSink"
ice.states_shapefile       = "adp_plugins.ice.ice:DownloadStatesShapefile"
ice.ts_arrests             = "adp_plugins.ice.ice:TimeSeriesArrests"
ice.choropleth             = "adp_plugins.ice.ice:DetentionsChoropleth"
ice.feature_importance     = "adp_plugins.ice.ice:FeatureImportanceRemoval"
ice.pipeline_events        = "adp_plugins.ice.ice:PipelineEventsSample"
ice.pipeline_events_merged = "adp_plugins.ice.ice:PipelineEventsMerged"

[tool.setuptools.packages.find]
where = ["."]
