[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adp-plugins-ice"
version = "0.1.0"
description = "ADP plug-ins for ICE detention & enforcement datasets."
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
geo = ["geopandas"]
ml  = ["scikit-learn", "xgboost"]

[project.entry-points."adp.plugins"]
"ice.download_zip"           = "adp_plugins.ice.ice_data:DownloadIceZip"
"ice.local_files"            = "adp_plugins.ice.ice_data:LocalExcelFiles"
"ice.detect_headers"         = "adp_plugins.ice.ice_data:DetectHeaderAndRead"
"ice.csv_sink"               = "adp_plugins.ice.ice_data:CsvSink"
"ice.states_shapefile"       = "adp_plugins.ice.ice_data:DownloadStatesShapefile"
"ice.ts_arrests"             = "adp_plugins.ice.ice_data:TimeSeriesArrests"
"ice.choropleth"             = "adp_plugins.ice.ice_data:DetentionsChoropleth"
"ice.feature_importance"     = "adp_plugins.ice.ice_data:FeatureImportanceRemoval"
"ice.pipeline_events"        = "adp_plugins.ice.ice_data:PipelineEventsSample"
"ice.pipeline_events_merged" = "adp_plugins.ice.ice_data:PipelineEventsMerged"
"ice.xlsx_to_csv"             = "adp_plugins.ice.ice_data:XlsxToCsv"


[tool.setuptools.packages.find]
where = ["."]
include = ["adp*", "plugins*"]
exclude = [ "out*","workflows*", "pipelines*"]

